// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating renders correctly 1`] = `
<div
  className=
      ms-Rating-star
      ms-RatingStar-root
      ms-RatingStar-root--small
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      &:hover .ms-RatingStar-back {
        color: #323130;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover .ms-RatingStar-back {
        color: Highlight;
      }
      {
        height: 32px;
      }
  id="Rating0"
  role="radiogroup"
>
  <div
    className=
        ms-FocusZone
        ms-Rating-focuszone
        ms-RatingStar-root--small
        &:focus {
          outline: none;
        }
        {
          display: inline-block;
          outline: transparent;
          position: relative;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        {
          height: 32px;
        }
    data-focuszone-id="FocusZone2"
    data-tabster="{\\"uncontrolled\\": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <button
      aria-checked={true}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      data-is-current={true}
      disabled={false}
      id="Rating0-star-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel1-1"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStarFill"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStarFill"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating0-star-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel1-2"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStar"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating0-star-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel1-3"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStar"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating0-star-3"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel1-4"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStar"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating0-star-4"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel1-5"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStar"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          
        </i>
      </div>
    </button>
  </div>
</div>
`;

exports[`Rating renders correctly with half star 1`] = `
<div
  className=
      ms-Rating-star
      ms-RatingStar-root
      ms-RatingStar-root--small
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      &:hover .ms-RatingStar-back {
        color: #323130;
      }
      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover .ms-RatingStar-back {
        color: Highlight;
      }
      {
        height: 32px;
      }
  id="Rating3"
  role="radiogroup"
>
  <div
    className=
        ms-FocusZone
        ms-Rating-focuszone
        ms-RatingStar-root--small
        &:focus {
          outline: none;
        }
        {
          display: inline-block;
          outline: transparent;
          position: relative;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric--isFocusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        :host(.ms-Fabric--isFocusVisible) &:focus:after {
          border: 1px solid #ffffff;
          bottom: 1px;
          content: "";
          left: 1px;
          outline: 1px solid #605e5c;
          position: absolute;
          right: 1px;
          top: 1px;
          z-index: 1;
        }
        {
          height: 32px;
        }
    data-focuszone-id="FocusZone5"
    data-tabster="{\\"uncontrolled\\": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating3-star-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel4-1"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStarFill"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStarFill"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating3-star-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel4-2"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStarFill"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStarFill"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={true}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      data-is-current={true}
      disabled={false}
      id="Rating3-star-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel4-3"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStar"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStarFill"
          style={
            Object {
              "width": "50%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating3-star-3"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel4-4"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStar"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          
        </i>
      </div>
    </button>
    <button
      aria-checked={false}
      className=
          ms-Rating-button
          ms-Rating--small
          {
            background-color: transparent;
            border: none;
            box-sizing: content-box;
            cursor: pointer;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            outline: transparent;
            padding-bottom: 8px;
            padding-left: 2px;
            padding-right: 2px;
            padding-top: 8px;
            position: relative;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          :host(.ms-Fabric--isFocusVisible) &:focus:after {
            border: 1px solid #ffffff;
            bottom: 1px;
            content: "";
            left: 1px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 1px;
            top: 1px;
            z-index: 1;
          }
          &:disabled {
            cursor: default;
          }
          &[disabled] {
            cursor: default;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-back {
            color: WindowText;
          }
          &:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: #605e5c;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover ~ .ms-Rating-button .ms-RatingStar-front {
            color: WindowText;
          }
          &:hover .ms-RatingStar-back {
            color: #0078d4;
          }
          &:hover .ms-RatingStar-front {
            color: #005a9e;
          }
          {
            font-size: 16px;
            height: 16px;
            line-height: 16px;
          }
      disabled={false}
      id="Rating3-star-4"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="radio"
      type="button"
    >
      <span
        className=
            ms-Rating-labelText
            {
              border: 0px;
              height: 1px;
              margin-bottom: -1px;
              margin-left: -1px;
              margin-right: -1px;
              margin-top: -1px;
              overflow: hidden;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: absolute;
              white-space: nowrap;
              width: 1px;
            }
        id="RatingLabel4-5"
      >
        
      </span>
      <div
        className=
            ms-RatingStar-container
            {
              display: inline-block;
              height: inherit;
              position: relative;
            }
      >
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-back
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #605e5c;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
                width: 100%;
              }
          data-icon-name="FavoriteStar"
        >
          
        </i>
        <i
          aria-hidden={true}
          className=
              ms-RatingStar-front
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                color: #323130;
                display: inline-block;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                height: 100 %;
                left: 0;
                overflow: hidden;
                position: absolute;
                speak: none;
                text-align: center;
                top: 0;
                vertical-align: middle;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: Highlight;
              }
          data-icon-name="FavoriteStar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          
        </i>
      </div>
    </button>
  </div>
</div>
`;
